k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvderby
spec:
  selector: {app: mvderby}
  ports:
    - {name: http, port: 80, targetPort: http}
